Minor update: added created date on issues & dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,17 @@
+body {
+    /* FOR DARK MODE */
+    background-color: var(--bs-dark);
+    color: var(--bs-white);
+}
+
 aside {
     width: 10%;
     height: 500px;
     background-color: aqua;
 }
-
+.container h1 {
+    margin-top: 20px;
+}
 #issueList {
     display: flex;
     flex-direction: row;
@@ -26,6 +34,7 @@ aside {
     margin-top: -15px;
 }
 .form-wrapper {
+    margin-top: 20px;
     border: 1px solid #ced4da;
     border-radius: 4px;
     padding: 20px;
